Minor changes to ListingsPage to prevent body from shrinking too much on changing window width

--- a/src/components/FooterBar/footerBar.module.css
+++ b/src/components/FooterBar/footerBar.module.css
@@ -93,13 +93,14 @@
   position: relative;
 }
 
-.home-link {
+.footer-link {
   align-items: flex-start;
   display: flex;
   height: 48px;
   margin-left: 42px;
   position: relative;
   text-decoration: none;
+  color: black;
 }
 
 
