--- a/src/pages/ListingsPage/listingsPage.module.css
+++ b/src/pages/ListingsPage/listingsPage.module.css
@@ -8,9 +8,9 @@
   flex-direction: column;
   min-height: 1000px;
   overflow: hidden;
-  padding: 31px 0;
+  padding: 32px 32px;
   margin: 10px 150px;
-  min-width: 300px;
+  min-width: 1000px;
 }
 
 .filter-tutor-tutee {
